--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.2"
+  },
+  "engines": {
+    "node": "14.17.4",
+    "npm": "7.20.3"
   }
 }
